--- a/style/faq.css
+++ b/style/faq.css
@@ -80,46 +80,31 @@
     color: #EC7801;
 }
 
-.info {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    overflow: hidden;
-}
-
-.info_head {
+.info{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     width: 50%;
-    padding: 0 100px;
+    margin: 0 auto;
 }
 
-.info_head label{
-    color: #643D2F;
-}
-
-.info_head input {
-    margin-left: 30px;
+.info input {
     height: 50px;
+    margin-bottom: 20px;
 }
 
-.info_body {
-    width: 50%;
-    padding-right: 150px;
-}
-
-.info_body textarea {
-    width: 100%;
+.info textarea {
     height: 200px;
     resize: none;
 }
 
-.info_head input,
-.info_body textarea {
+.info input, .info textarea{
+    width: 100%;
     outline: 0;
     border: 0;
+    border-radius: 20px;
+    padding: 10px 20px;
     background-color: #F4ECDC;
 }
 
