--- a/style/product.css
+++ b/style/product.css
@@ -1,44 +1,76 @@
 /* -----product-begin----- */
-.base-product .container{
+.base-product .container {
     display: flex;
     justify-content: space-evenly;
     padding: 20px 0;
 }
 
-.product_head{
+.product_head {
     background-color: #F4ECDC;
+    width: 500px;
+    height: 500px;
+    background-image: url(../img/product_1.png);
+    background-repeat: no-repeat;
 }
 
-.product_body{
+.product_head.js-zoom {
+    cursor: zoom-in;
+}
+
+.product_body {
     width: 500px;
     padding: 20px 40px;
 }
 
-.product_body p{
+.product_body p {
     margin: 20px 0;
     color: #EC7801;
 }
 
-.product_body span{
+.product_body span {
     color: #643D2F;
 }
 
-.product_body h4{
+.product_body h4 {
     margin: 40px 0;
     color: #EC7801;
 }
 
-.source_item{
+.source_item {
     margin-bottom: 40px;
     font-size: 24px;
 }
 
-.source_item i{
+.source_item i {
     margin-right: 20px;
     transition: .5s;
 }
 
-.source_item:hover i{
+.source_item:hover i {
     transform: translateX(20px) rotate(360deg);
 }
+
 /* -----product-end----- */
+
+/* -----rwd-begin(max-width:1024px)----- */
+@media screen and (max-width: 1024px) {
+    .base-product .container {
+        align-items: center;
+        flex-direction: column;
+    }
+}
+
+/* -----rwd-end(max-width:1024px)----- */
+
+/* -----rwd-begin(max-width:540px)----- */
+@media screen and (max-width: 540px) {
+    .product_head {
+        width: 300px;
+        height: 300px;
+    }
+
+    .product_body {
+        width: 100%;
+    }
+}
+/* -----rwd-end(max-width:540px)----- */
