--- a/style/faq.css
+++ b/style/faq.css
@@ -161,3 +161,9 @@
         font-size: 14px;
     }
 }
+
+@media screen and (max-width: 415px) {
+    .faq_item:nth-child(even) .faq_num::before {
+        right: 160px;
+    }
+}
