點擊開啟互動視窗背景鎖住不動，修改nav item左右間距

--- a/style/all.css
+++ b/style/all.css
@@ -718,9 +718,14 @@ a:hover .logo_w {
     }
 
     /* -----navbar-begin----- */
+    .nav_head {
+        margin-left: 20px;
+    }
+
     .nav_btn {
         display: flex;
         height: 80px;
+        margin-right: 20px;
     }
 
     .nav_list {
