--- a/style/gsaptrain.css
+++ b/style/gsaptrain.css
@@ -20,6 +20,7 @@ body .container {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 body .container .line {
   position: absolute;
