--- a/style/gsaptrain.sass
+++ b/style/gsaptrain.sass
@@ -18,7 +18,7 @@ body
         display: flex
         justify-content: center
         align-items: center
-        // overflow: hidden
+        overflow: hidden
         .line
             position: absolute
             width: 3px
