add gsaptrain style

--- a/sass/gsaptrain.sass
+++ b/sass/gsaptrain.sass
@@ -1,6 +1,7 @@
 body
     cursor: none
     background-color: orange
+    overflow: hidden
     .mouse
         position: absolute
         width: 30px
