--- a/style/gsaptrain.css
+++ b/style/gsaptrain.css
@@ -1,1 +1,39 @@
-body{cursor:none;background-color:orange;overflow:hidden}body .mouse{position:absolute;width:30px;height:30px;border-radius:50%;background-color:#fff;transform:translate(-50%, -50%);z-index:9}body .container{position:relative;max-width:1200px;height:600px;margin:50px auto;border:1px solid;display:flex;justify-content:center;align-items:center;overflow:hidden}body .container .line{position:absolute;width:3px;height:3px;background-color:#000}body .container .circle{position:absolute;width:300px;height:300px;border:1px solid #fff;border-radius:50%;opacity:0}/*# sourceMappingURL=gsaptrain.css.map */
+body {
+  cursor: none;
+  background-color: orange;
+  overflow: hidden;
+}
+body .mouse {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+  transform: translate(-50%, -50%);
+  z-index: 9;
+}
+body .container {
+  position: relative;
+  max-width: 1200px;
+  height: 600px;
+  margin: 50px auto;
+  border: 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+body .container .line {
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  background-color: #000;
+}
+body .container .circle {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  opacity: 0;
+}/*# sourceMappingURL=gsaptrain.css.map */
