--- a/sass/ntust.sass
+++ b/sass/ntust.sass
@@ -28,6 +28,7 @@ html
                     width: 100px
                     margin-right: 20px
                 input
+                    width: 112px
                     height: 20px
                     border: 0
                     border-radius: 3px
