--- a/sass/ntust.sass
+++ b/sass/ntust.sass
@@ -5,6 +5,40 @@ html
     body
         background-color: #f7bb94
         font-family: Helvetica
+    .mask
+        position: absolute
+        width: 100vw
+        height: 100vh
+        background-color: rgba(0, 0, 0, .5)
+        .modal
+            position: relative
+            width: 300px
+            height: 170px
+            left: 50%
+            top: 50%
+            transform: translate(-50%, -50%)
+            background-color: #fff
+            border-radius: 10px 
+            h3
+                padding: 20px 0
+                text-align: center
+                font-size: 24px
+            label
+                margin: 0 20px
+            button
+                color: #fff
+                cursor: pointer
+                background-color: #999
+                border: 0
+                border-radius: 5px
+                outline: 0
+                display: block
+                margin: 20px auto
+                width: 50px
+                height: 35px
+                font-size: 20px
+                &:hover
+                    background-color: rgb(85, 132, 170)
     .container
         max-width: 1200px
         margin: 0 auto
