--- a/style/ntust.css
+++ b/style/ntust.css
@@ -9,6 +9,46 @@ html body {
   background-color: #f7bb94;
   font-family: Helvetica;
 }
+html .mask {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+html .mask .modal {
+  position: relative;
+  width: 300px;
+  height: 170px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 10px;
+}
+html .mask .modal h3 {
+  padding: 20px 0;
+  text-align: center;
+  font-size: 24px;
+}
+html .mask .modal label {
+  margin: 0 20px;
+}
+html .mask .modal button {
+  color: #fff;
+  cursor: pointer;
+  background-color: #999;
+  border: 0;
+  border-radius: 5px;
+  outline: 0;
+  display: block;
+  margin: 20px auto;
+  width: 50px;
+  height: 35px;
+  font-size: 20px;
+}
+html .mask .modal button:hover {
+  background-color: rgb(85, 132, 170);
+}
 html .container {
   max-width: 1200px;
   margin: 0 auto;
