--- a/sass/ntust.sass
+++ b/sass/ntust.sass
@@ -3,6 +3,7 @@
 html
     scroll-behavior: smooth
     body
+        overflow: hidden
         background-color: #f7bb94
         font-family: Helvetica
     .mask
