--- a/sass/ntust.sass
+++ b/sass/ntust.sass
@@ -97,3 +97,17 @@ html
             font-size: 20px
         th, td
             padding: 5px
+        button#send
+            margin: 20px auto
+            color: #fff
+            cursor: pointer
+            background-color: #999
+            border: 0
+            border-radius: 5px
+            outline: 0
+            display: block
+            width: 50px
+            height: 35px
+            font-size: 20px
+            &:hover
+                background-color: rgb(85, 132, 170)
