--- a/sass/gsaptrain.sass
+++ b/sass/gsaptrain.sass
@@ -1,7 +1,11 @@
 body
     cursor: none
     background-color: orange
-    overflow: hidden
+    overflow-x: hidden
+    font-size: 16px
+    a
+        display: block
+        text-decoration: none
     .mouse
         position: absolute
         width: 30px
@@ -10,26 +14,163 @@ body
         background-color: #fff
         transform: translate(-50%, -50%)
         z-index: 9
+    .header
+        position: sticky
+        top: 0
+        border-bottom: 1px solid #000
+        margin-bottom: 20px
+        .header_container
+            display: flex
+            align-items: center
+            justify-content: space-between
+            padding: 10px 0
+            max-width: 100%
+            margin: auto
+            h1.logo
+                padding: 0 20px
+                color: #000
+                font-size: 32px
+                font-weight: 900
+            .nav
+                display: flex
+                align-items: center
+                .nav_list
+                    display: flex
+                    .nav_item
+                        position: relative
+                        margin-left: 20px
+                        font-size: 1.2rem
+                        text-align: center
+                        &:last-child
+                            width: 150px
+                            &::after
+                                position: absolute
+                                display: block
+                                content: ''
+                                left: 0
+                                top: -16px
+                                width: 1px
+                                height: 51px
+                                background-color: #000
     .container
-        position: relative
-        max-width: 1200px
-        height: 600px
-        margin: 50px auto
-        border: 1px solid
-        display: flex
-        justify-content: center
-        align-items: center
-        overflow: hidden
-        .line
-            position: absolute
-            width: 3px
-            height: 3px
-            background-color: #000
-        .circle
-            position: absolute
-            width: 300px
-            height: 300px
-            border: 1px solid #fff
-            border-radius: 50%
-            opacity: 0
+        max-width: 100%
+        margin: 0 auto
+        .box
+            position: sticky
+            top: 73px
+            width: 100%
+            height: 800px
+            margin: auto
+            border: 1px solid
+            display: flex
+            justify-content: center
+            align-items: center
+            overflow: hidden
+            .line
+                position: absolute
+                width: 3px
+                height: 3px
+                background-color: #000
+            .circle
+                position: absolute
+                width: 300px
+                height: 300px
+                border: 1px solid #fff
+                border-radius: 50%
+                opacity: 0
+        .blank
+            overflow: hidden
+            position: sticky
+            z-index: 1
+            top: 875px
+            height: 90px
+            display: flex
+            justify-content: space-between
+            align-items: center
+            padding-right: 10px
+            .blank_head
+                padding: 0 20px
+                font-size: 3rem
+                font-weight: 900
+            .blank_body
+                position: relative
+                transform: translate(-20px, -20px)
+                width: 5px
+                height: 40px
+                background-color: #000
+                &::before, &::after
+                    position: absolute
+                    top: 24px
+                    display: block
+                    content: ''
+                    width: 5px
+                    height: 20px
+                    background-color: #000
+                &::before
+                    left: 6px
+                    transform: rotate(45deg)
+                &::after
+                    left: -6px
+                    transform: rotate(-45deg)
+        .box1
+            background-color: #fff
+            position: sticky
+            top: 52px
+            z-index: 2
+            padding: 20px
+            border-top: 1px solid #000
+            height: 75vh
+            h2
+                font-size: 5rem
+                font-weight: 900
+                text-align: center
+            p
+                padding: 300px 0 20px
+                font-size: 3rem
+        .box2
+            background-color: #fff
+            position: sticky
+            top: 52px
+            z-index: 3
+            padding: 0 20px 20px
+            border-top: 1px solid #000
+            .box2_head
+                display: flex
+                justify-content: space-between
+                align-items: center
+                padding: 20px 0
+                h4
+                    font-size: 1.5rem
+                    font-weight: 900
+                p
+                    font-size: 1.2rem
+                button
+                    border: 0
+                    border-radius: 25px
+                    outline: 0
+                    padding: 10px
+                    font-size: 1.2rem
+                    font-weight: 900
 
+            .box2_body
+                display: flex
+                justify-content: space-between
+                .box2_text
+                    font-size: 1.2rem
+                    line-height: 1.5
+                    width: 400px
+                    align-self: flex-end
+                    span
+                        color: #c4c4c4
+        .box2 + .box2
+            top: 140px
+        .box2 + .box2 + .box2
+            top: 220px
+        .box2 + .box2 + .box2 + .box2
+            top: 300px
+        .box3
+            background-color: red
+            position: relative
+            height: 70vh
+            z-index: 4
+                    
