--- a/sass/gsaptrain.sass
+++ b/sass/gsaptrain.sass
@@ -13,7 +13,7 @@ body
         border-radius: 50%
         background-color: #fff
         transform: translate(-50%, -50%)
-        z-index: 9
+        z-index: 999
     .header
         position: sticky
         top: 0
@@ -144,14 +144,15 @@ body
                     font-weight: 900
                 p
                     font-size: 1.2rem
-                button
-                    border: 0
-                    border-radius: 25px
-                    outline: 0
-                    padding: 10px
-                    font-size: 1.2rem
-                    font-weight: 900
-
+                .btn_inner
+                    button
+                        border: 0
+                        border-radius: 25px
+                        cursor: none
+                        outline: 0
+                        padding: 10px
+                        font-size: 1.2rem
+                        font-weight: 900
             .box2_body
                 display: flex
                 justify-content: space-between
@@ -169,8 +170,14 @@ body
         .box2 + .box2 + .box2 + .box2
             top: 300px
         .box3
-            background-color: red
-            position: relative
+            background-color: #c4c4c4
+            position: sticky
+            top: 53px
             height: 70vh
             z-index: 4
+        .box4
+            position: relative
+            background-color: #1a1818
+            height: 100vh
+            z-index: 5
                     
