--- a/sass/gsaptrain.sass
+++ b/sass/gsaptrain.sass
@@ -180,4 +180,11 @@ body
             background-color: #1a1818
             height: 100vh
             z-index: 5
+        .box3, .box4
+            p
+                font-size: 5rem
+                text-align: center
+                position: relative
+                top: 50%
+                transform: translateY(-50%)
                     
